# dependency-track-mcp

./: .env.example  .gitignore  CLAUDE.md  KEYCLOAK_SETUP.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup_keycloak_auto.py  start_services.py  verify_security.py
.claude/: settings.local.json
.github/workflows/: ci.yml  lint.yml  security.yml
src/dependency_track_mcp/: __init__.py  auth_wrapper.py  client.py  config.py  exceptions.py  main.py  models.py  oauth.py  scopes.py  server.py
src/dependency_track_mcp/tools/: __init__.py  acl.py  badges.py  bom.py  calculator.py  component_properties.py  components.py  config_properties.py  cwe.py  events.py  findings.py  integrations.py  ldap.py  license_groups.py  licenses.py  metrics.py  notifications.py  oidc.py  permissions.py  policies.py  project_properties.py  projects.py  repositories.py  search.py  services.py  tags.py  teams.py  users.py  version.py  vex.py  vulnerabilities.py
tests/: __init__.py  conftest.py  test_client.py  test_client_complete.py  test_components_cpe.py  test_config.py  test_config_edges.py  test_config_tls.py  test_exceptions.py  test_integration.py  test_main.py  test_models.py  test_oauth.py  test_oauth_additional.py  test_oauth_jwks_errors.py  test_oauth_logging.py  test_oauth_token_validation.py  test_scopes.py  test_server.py  test_server_initialization.py  test_tools_acl.py  test_tools_badges.py  test_tools_bom.py  test_tools_bom_validation.py  test_tools_calculator.py  test_tools_complete.py  test_tools_component_properties.py  test_tools_components.py  test_tools_components_optional.py  test_tools_config_properties.py  test_tools_cwe.py  test_tools_events.py  test_tools_findings.py  test_tools_integrations.py  test_tools_ldap.py  test_tools_license_groups.py  test_tools_licenses.py  test_tools_metrics.py  test_tools_metrics_errors.py  test_tools_notifications.py  (+21 more)
