[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dependency-track-mcp"
version = "0.1.0"
description = "MCP server for OWASP Dependency Track - Software Composition Analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "secprog"}
]
keywords = ["mcp", "dependency-track", "sca", "sbom", "security", "vulnerabilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
dependency-track-mcp = "dependency_track_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dependency_track_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Ignore N815 (mixedCase variable names) in models.py - these match the API format
per-file-ignores = {"src/dependency_track_mcp/models.py" = ["N815"]}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore:SSL certificate verification is disabled:UserWarning",
    "ignore:.*DEVELOPMENT MODE.*:UserWarning",
    "ignore:'dependency_track_mcp.server' found in sys.modules:RuntimeWarning",
]
